Fixed missing margin under filters title in evolution theme

--- a/web/css/abstracts/mixins/_typography.less
+++ b/web/css/abstracts/mixins/_typography.less
@@ -189,6 +189,9 @@
     }
     [data-role="collapsible"],
     [data-mage-init*='"collapsible":'] {
+        > [data-role=title] {
+            margin: 0;
+        }
         > [data-role=content][aria-hidden=false] {
             margin: @2 0;
         }
