--- a/web/css/components/_collapsible.less
+++ b/web/css/components/_collapsible.less
@@ -39,12 +39,6 @@
             position: absolute;
         }
     }
-    [data-role="collapsible"],
-    [data-mage-init*='"collapsible":'] {
-        > [data-role=title] {
-            margin: 0;
-        }
-    }
 }
 
 & when not (@critical) {
